移植存储 UI 快照构建器 / Port storage UI payload snapshots